--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -8,22 +6,21 @@ html {
   font-family: 'Open Sans', sans-serif;
 }
 
-.container {
-  max-width: 26rem;
-  margin-right: auto;
-  margin-left: auto;
+nav {
+  padding: 30px 0;
+  max-width: 70%;
+  margin: auto;
 }
 
-header {
+nav ul {
   display: flex;
-  flex-direction: column;
+  list-style: none;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 4rem;
+  padding: 0;
 }
 
-.logo {
-  width: 10rem;
-  height: 10rem;
-  background-image: url(./img/rocket.svg);
-  background-size: contain;
+nav ul li a {
+  text-decoration: none;
+  color: black;
 }
