--- a/src/style.css
+++ b/src/style.css
@@ -7,20 +7,39 @@ html {
 }
 
 nav {
+  text-align: center;
   padding: 30px 0;
-  max-width: 70%;
-  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  /* max-width: 90%; */
+  /* margin: auto; */
 }
 
 nav ul {
   display: flex;
   list-style: none;
-  justify-content: space-between;
-  align-items: center;
   padding: 0;
 }
 
 nav ul li a {
   text-decoration: none;
+  min-width: 100px;
+  display: inline-block;
   color: black;
+  margin: 0 15px;
+  padding: 40px 10px;
+  border-radius: 50px;
+}
+
+.green {
+  background-color: #17a301;
+}
+
+.yellow {
+  background-color: #ffce2d;
+}
+
+.red {
+  background-color: #ff2632;
 }
