--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,27 @@
 
 html {
   font-family: 'Open Sans', sans-serif;
+  margin: 0 30px;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+h2 {
+  text-align: center;
+}
+
+header {
+  position: relative;
+  align-items: center;
 }
 
 nav {
+  /* position: absolute;
+  top: 0;
+  right: 0; */
   text-align: center;
-  padding: 30px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
