--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -1,20 +1,14 @@
 h1 {
   font-size: 60px;
-  position: relative;
-  top: 25px;
-  left: 0;
 }
 
 header {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding-bottom: 60px;
 }
 
 nav {
-  position: absolute;
-  top: 0;
-  right: 0;
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -32,8 +26,8 @@ nav ul li a {
   min-width: 100px;
   display: inline-block;
   color: black;
-  margin: 0 15px;
-  padding: 40px 10px;
+  margin: 0;
+  padding: 40px 0;
   border-radius: 50px;
   font-weight: bold;
 }
