--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0 30px;
 }
 
@@ -12,6 +14,6 @@ h2 {
 }
 
 .container {
-  max-width: 70%;
+  max-width: 85%;
   margin: 0 auto;
 }
